<resources>
    <string name="app_name">抢买单</string>

    //登录界面String
    <string name="login_name">帐号</string>
    <string name="login_pwd">密码</string>
    <string name="login_name_hint">手机号/抢买单会员名</string>
    <string name="login_pwd_hint">请输入登录密码</string>
    <string name="login_btn">登录</string>
    <string name="login_register_btn">没有帐号?请注册</string>

    //注册界面String
    <string name="phone_register">手机号注册</string>
    <string name="register_phonenum">手机号码</string>
    <string name="register_phonenum_hint">手机号码将作为帐号</string>
    <string name="register_pwd">登录密码</string>
    <string name="register_pwd_hint">组合字母、数字</string>
    <string name="register_btn">注册</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="input_type">0123456789abcdefghijklmnopqrstuvwsyzABCDEFGHIJKLMNOPQRSTUVWSYZ</string>
    <string name="net_error">网络无法连接，请检查您的网络</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //发起聚会界面
    <string name="paty_theme">主题</string>
    <string name="paty_theme_hint">聚会主题</string>
    <string name="paty_explain_hint">聚会说明</string>
    <string name="paty_address">地址</string>
    <string name="paty_address_hint">聚会地址</string>
    <string name="paty_sure">确定</string>

    <string name="kiting_accouny_al">请输入支付宝帐号</string>
    <string name="kiting_accouny_bank">请输入银行卡号</string>

    <string name="app_tip">提示</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <string name="share_title">消费是能力，快乐就分享</string>
    <string name="share_description">吃喝玩乐，用抢买单来结账，AA付”、“随机付”、“土豪付”任你选</string>
</resources>
