<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hxtao.qmd.hxtpay.activity.RegisterActivity">

    <Button
        android:id="@+id/register_back"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/back_title_bg"/>

    <TextView
        android:id="@+id/phone_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_logo_height"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_logo_margin_50dp"
        android:layout_marginTop="@dimen/login_logo_margin"
        android:gravity="center"
        android:text="@string/phone_register"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/register_user_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_ll_height"
        android:layout_below="@id/phone_title_tv"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/register_phonenum"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/register_phone_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/register_phonenum_hint"
            android:inputType="number"/>
    </LinearLayout>

    <TextView
        android:id="@+id/grayline_tv"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/register_user_ll"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorWhiteLine"/>

    <LinearLayout
        android:id="@+id/register_pwd_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_ll_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_user_ll"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/register_pwd"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/register_pwd_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/register_pwd_hint"
            android:digits="@string/input_type"
            android:inputType="textPassword"/>

    </LinearLayout>

    <TextView
        android:id="@+id/grayline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/register_pwd_ll"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorWhiteLine"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grayline"
        android:layout_margin="10dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/register_btn"
        android:textColor="@color/colorWhite"/>
</RelativeLayout>
