<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.hxtao.qmd.hxtpay.activity.LoginActivity">

    <ImageView
        android:id="@+id/login_logo_iv"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_ll_height"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_logo_margin_50dp"
        android:layout_marginTop="@dimen/login_logo_margin"
        android:background="@mipmap/login_logo_bg"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:id="@+id/input_ll"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/login_logo_iv"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <!--帐号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="帐号"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <com.hxtao.qmd.hxtpay.widgets.DropEditText
                android:id="@+id/name_ed_login_act"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                >

            </com.hxtao.qmd.hxtpay.widgets.DropEditText>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorWhiteGray"/>
        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="密码"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/pwd_ed_login_act"
                style="?android:attr/textViewStyle"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:background="@null"
                android:hint="请输入登录密码"
                android:inputType="textPassword"
                android:digits="@string/input_type"/>

            <ImageView
                android:id="@+id/show_img_login_act"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@mipmap/show_pwd"/>
        </LinearLayout>

    </LinearLayout>
    

    <Button
    android:id="@+id/login_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/input_ll"
    android:layout_margin="10dp"
    android:background="@drawable/shape_radius_dp_btn"
    android:gravity="center"
    android:text="@string/login_btn"/>
    <Button
        android:id="@+id/forgetpwd_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="忘记密码"
        android:background="@null"
        android:textColor="@color/login_bg"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_btn"/>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:text="@string/login_register_btn"/>

</RelativeLayout>
